--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "q": "*",
         "crypto": "*",
         "path": "*",
-        "fs": "*"
+        "fs": "*",
+        "ejs": "*"
     }
 }
